logs/Slang/chapter-7/arrays/associative/locator-methods/min.sv.log
name: array-locator-methods-min
description: Test support of array locator methods
should_fail: 0
tags: 7.12.1 7.12 7.10
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/locator-methods/min.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/locator-methods/min.sv:9:6: error: dimension requires a constant range
int s[] = { 10, 20, 2, 11, 5 };
     ^~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/associative/locator-methods/min.sv:10:7: error: dimension requires a constant range
int qi[$];
      ^~~
